Fixing spacer-xl [master 841606c] Fixing HTML examples  1 file changed, 6 insertions(+), 6 deletions(-) Please enter the commit message for your changes. Lines starting [master 841606c] Fixing HTML examples  1 file changed, 6 insertions(+), 6 deletions(-) with '[master 841606c] Fixing HTML examples  1 file changed, 6 insertions(+), 6 deletions(-)' will be ignored, and an empty message aborts the commit. [master 841606c] Fixing HTML examples  1 file changed, 6 insertions(+), 6 deletions(-) [master 841606c] Fixing HTML examples  1 file changed, 6 insertions(+), 6 deletions(-) On branch master [master 841606c] Fixing HTML examples  1 file changed, 6 insertions(+), 6 deletions(-) Changes to be committed: [master 841606c] Fixing HTML examples  1 file changed, 6 insertions(+), 6 deletions(-) 	modified:   bootstrap-spacing.scss [master 841606c] Fixing HTML examples  1 file changed, 6 insertions(+), 6 deletions(-) [master 841606c] Fixing HTML examples  1 file changed, 6 insertions(+), 6 deletions(-) Changes not staged for commit: [master 841606c] Fixing HTML examples  1 file changed, 6 insertions(+), 6 deletions(-) 	modified:   bootstrap-spacing.css [master 841606c] Fixing HTML examples  1 file changed, 6 insertions(+), 6 deletions(-) 	modified:   bootstrap-spacing.css.map [master 841606c] Fixing HTML examples  1 file changed, 6 insertions(+), 6 deletions(-) 	modified:   index.html

--- a/bootstrap-spacing.scss
+++ b/bootstrap-spacing.scss
@@ -5,7 +5,7 @@
 $sm: 5px;
 $md: 15px;
 $lg: 25px;
-$xl: 40px;
+$xl: 45px;
 $hairlineColor : rgba(0,0,0,.1);
 
 
@@ -24,7 +24,7 @@ $hairlineColor : rgba(0,0,0,.1);
 		margin-top: $lg;
 	}
 
-.spacer-xl {
+&.spacer-xl {
 		margin-top: $xl;
 	}
 }
